// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedNameInput 1`] = `
<span>
  My name is 
  <input
    onChange={[Function]}
    type="text"
    value="World"
  />
</span>
`;

exports[`Name Input snapshot 1`] = `
<span>
  My name is 
  <input
    onChange={[Function]}
    type="text"
    value={undefined}
  />
</span>
`;
